Fixed bug with '100vh' on mobiles (set '100dvh' instead)

--- a/assets/styles/global/_template.scss
+++ b/assets/styles/global/_template.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .dark-theme {
