--- a/assets/styles/main/main.css
+++ b/assets/styles/main/main.css
@@ -44,7 +44,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .dark-theme {
@@ -116,7 +116,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .dark-theme {
@@ -269,7 +269,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .dark-theme {
